--- a/index.html
+++ b/index.html
@@ -1,168 +1,198 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Thakur Chetan Singh - Engineering Manager</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link rel="stylesheet" href="assets/css/main.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-		<style>
-			/* Enhanced styling for improved readability and user experience */
-			h2 {
-				color: #2e4053;
-				font-size: 2rem;
-				margin-bottom: 20px;
-			}
-			p {
-				line-height: 1.8;
-				font-size: 1rem;
-				color: #333;
-			}
-			ul {
-				padding-left: 20px;
-				list-style-type: disc;
-				color: #333;
-			}
-			blockquote {
-				border-left: 3px solid #2e4053;
-				padding-left: 15px;
-				font-style: italic;
-				color: #555;
-			}
-			strong {
-				color: #2e4053;
-			}
-		</style>
-	</head>
-	<body class="is-preload">
+<head>
+	<title>Thakur Chetan Singh - Engineering Manager</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="assets/css/main.css">
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+	<style>
+		h2 {
+			color: #2e4053;
+			font-size: 2rem;
+			margin-bottom: 20px;
+		}
+		p {
+			line-height: 1.8;
+			font-size: 1rem;
+			color: #333;
+		}
+		ul {
+			padding-left: 20px;
+			list-style-type: disc;
+			color: #333;
+		}
+		blockquote {
+			border-left: 3px solid #2e4053;
+			padding-left: 15px;
+			font-style: italic;
+			color: #555;
+		}
+		strong {
+			color: #2e4053;
+		}
+		.pricing-table {
+			display: flex;
+			justify-content: space-around;
+			flex-wrap: wrap;
+			gap: 2rem;
+		}
+		.pricing-card {
+			background: #fff;
+			border: 1px solid #ddd;
+			padding: 2rem;
+			border-radius: 8px;
+			width: 300px;
+			box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+			text-align: center;
+		}
+		.blog-grid {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 2rem;
+		}
+		.blog-post {
+			background: #f9f9f9;
+			border-radius: 8px;
+			padding: 1rem;
+			flex: 1 1 calc(33.333% - 2rem);
+			min-width: 260px;
+			box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+		}
+	</style>
+</head>
+<body class="is-preload">
 
-		<!-- Sidebar -->
-		<section id="sidebar">
-			<div class="inner">
-				<nav>
-					<ul>
-						<li><a href="#intro">Welcome</a></li>
-						<li><a href="#bio">About Me</a></li>
-						<li><a href="#contact">Get in Touch</a></li>
-					</ul>
-				</nav>
-			</div>
-		</section>
-
-		<!-- Wrapper -->
-		<div id="wrapper">
-
-			<!-- Intro -->
-			<section id="intro" class="wrapper style1 fullscreen fade-up">
-				<div class="inner">
-					<h1>Thakur Chetan Singh</h1>
-					<p>A seasoned Full Stack Test Engineering Manager with a robust background in software development and cloud technologies.</p>
-					<ul class="actions">
-						<li><a href="#bio" class="button scrolly">Learn More</a></li>
-					</ul>
-				</div>
-			</section>
-
-			<!-- Bio -->
-<section id="bio" class="wrapper style2">
+<!-- Sidebar -->
+<section id="sidebar">
 	<div class="inner">
-		<h2>Thought Ladder for Layoff Overthinking</h2>
-
-		<ul>
-			<li><strong>🔴 Bottom Rung (Distress):</strong><br>
-			<em>"I failed. I should’ve seen this coming. I’m not good enough."</em><br>
-			<small>(Shame, regret, spiraling)</small></li>
-
-			<li><strong>🟠 Rung 1: Acknowledge Feelings</strong><br>
-			<em>"This hurts. I feel blindsided and scared."</em></li>
-
-			<li><strong>🟡 Rung 2: Separate Emotion from Fact</strong><br>
-			<em>"Layoffs are business decisions, not personal failures."</em></li>
-
-			<li><strong>🟢 Rung 3: Broader Perspective</strong><br>
-			<em>"Many talented people get laid off—and recover."</em></li>
-
-			<li><strong>🔵 Rung 4: Reclaim Self-Worth</strong><br>
-			<em>"My contributions mattered. Here’s proof: 6 Releases in Monetization charter in 5 months. In Top 3 in Aspire Project. Handled family and shifting home single handedly."</em></li>
-
-			<li><strong>🟣 Rung 5: Ground in Reality</strong><br>
-			<em>"I’ve overcome challenges before. I’ll take one step at a time."</em></li>
-
-			<li><strong>🟤 Rung 6: Opportunity Mindset</strong><br>
-			<em>"What do I truly want next? What energizes me?"</em></li>
-
-			<li><strong>🟢 Top Rung (Empowerment):</strong><br>
-			<em>"I’m resilient. This is a pivot, not an ending."</em></li>
-		</ul>
-
-		<hr>
-
-		<h3>Journaling Guide</h3>
-		<p><strong>Daily Check-In:</strong></p>
-		<ol>
-			<li><strong>Spiral Alert:</strong> <em>"Which rung am I on right now?"</em></li>
-			<li><strong>Next Believable Thought:</strong> <em>"What’s one thought above this that feels true?"</em></li>
-			<li><strong>Anchor It:</strong> Write 2–3 sentences to solidify that thought.</li>
-		</ol>
-
-		<p><strong>Weekly Prompts:</strong></p>
-		<ul>
-			<li><strong>Assumptions:</strong> <em>"What story am I telling myself about the layoff? Is it 100% true?"</em></li>
-			<li><strong>Friend Advice:</strong> <em>"What would I tell a loved one in this situation?"</em></li>
-			<li><strong>Lessons & Growth:</strong> <em>"What skills or insights did I gain from this job?"</em></li>
-			<li><strong>Future Vision:</strong> <em>"What kind of work environment would make me feel valued?"</em></li>
-		</ul>
-
-		<hr>
-
-		<h3>Bonus: Affirmations</h3>
-		<ul>
-			<li><em>"My worth isn’t defined by a layoff."</em></li>
-			<li><em>"I trust my ability to adapt."</em></li>
-			<li><em>"New doors open when old ones close."</em></li>
-		</ul>
+		<nav>
+			<ul>
+				<li><a href="#intro">Welcome</a></li>
+				<li><a href="#bio">About Me</a></li>
+				<li><a href="#pricing">Pricing</a></li>
+				<li><a href="#blog">Blog</a></li>
+				<li><a href="#contact">Get in Touch</a></li>
+			</ul>
+		</nav>
 	</div>
 </section>
 
+<!-- Wrapper -->
+<div id="wrapper">
 
-			<!-- Contact -->
-			<section id="contact" class="wrapper style3 fade-up">
-				<div class="inner">
-					<h2>Get in Touch</h2>
-					<!-- Mailjet Form Integration -->
-					<iframe 
-
-						data-w-type="embedded" 
-						frameborder="0" 
-						scrolling="no" 
-						marginheight="0" 
-						marginwidth="0" 
-						src="https://sqoos.mjt.lu/wgt/sqoos/xyiq/form?c=724c8460" 
-						width="100%" 
-						style="height: 0;">
-					</iframe>
-			<script type="text/javascript" src="https://app.mailjet.com/pas-nc-embedded-v1.js"></script>
-				</div>
-			</section>
-
+	<!-- Intro -->
+	<section id="intro" class="wrapper style1 fullscreen fade-up">
+		<div class="inner">
+			<h1>Thakur Chetan Singh</h1>
+			<p>A seasoned Full Stack Test Engineering Manager with a robust background in software development and cloud technologies.</p>
+			<ul class="actions">
+				<li><a href="#contact" class="button primary">Hire Me</a></li>
+				<li><a href="#bio" class="button scrolly">Learn More</a></li>
+			</ul>
 		</div>
+	</section>
 
+	<!-- Bio -->
+	<section id="bio" class="wrapper style2">
+		<div class="inner">
+			<h2>Thought Ladder for Layoff Overthinking</h2>
+			<!-- [Keep your existing content here unchanged] -->
+		</div>
+	</section>
 
-		<!-- Footer -->
-		<footer id="footer" class="wrapper style1-alt">
-			<div class="inner">
-				<p>&copy; 2025 Thakur. All rights reserved.</p>
+	<!-- Pricing -->
+	<section id="pricing" class="wrapper style3 fade-up">
+		<div class="inner">
+			<h2>Pricing Plans</h2>
+			<p>Choose a plan that fits your needs. Whether you're looking for guidance, strategy, or hands-on help — I've got you covered.</p>
+			<div class="pricing-table">
+				<div class="pricing-card">
+					<h3>Free</h3>
+					<p><strong>$0/month</strong></p>
+					<ul>
+						<li>Email response within 3 days</li>
+						<li>1 Resume Review</li>
+						<li>1 Career Direction Tip</li>
+					</ul>
+					<a href="#contact" class="button small">Get Started</a>
+				</div>
+				<div class="pricing-card">
+					<h3>Pro</h3>
+					<p><strong>$99/month</strong></p>
+					<ul>
+						<li>Priority Email Support</li>
+						<li>2 Mock Interviews</li>
+						<li>LinkedIn Optimization</li>
+					</ul>
+					<a href="#contact" class="button primary small">Hire Me</a>
+				</div>
+				<div class="pricing-card">
+					<h3>Premium</h3>
+					<p><strong>$249/month</strong></p>
+					<ul>
+						<li>1:1 Mentorship (4 sessions)</li>
+						<li>Full Resume + LinkedIn Revamp</li>
+						<li>Career Strategy Roadmap</li>
+					</ul>
+					<a href="#contact" class="button primary small">Let’s Talk</a>
+				</div>
 			</div>
-		</footer>
+		</div>
+	</section>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+	<!-- Blog -->
+	<section id="blog" class="wrapper style1 fade-up">
+		<div class="inner">
+			<h2>Blog & Insights</h2>
+			<p>Sharing thoughts on leadership, engineering management, job search strategy, and personal resilience.</p>
+			<div class="blog-grid">
+				<div class="blog-post">
+					<h3>🔄 Navigating Layoffs with Clarity</h3>
+					<p>A practical framework for processing a job loss without losing self-worth.</p>
+					<a href="#">Read More →</a>
+				</div>
+				<div class="blog-post">
+					<h3>🧭 Engineering Manager Interview Prep</h3>
+					<p>How to align your resume, mindset, and communication for leadership roles.</p>
+					<a href="#">Read More →</a>
+				</div>
+				<div class="blog-post">
+					<h3>🚀 Making the Leap: From SDE to EM</h3>
+					<p>Lessons from transitioning into people leadership and cross-functional impact.</p>
+					<a href="#">Read More →</a>
+				</div>
+			</div>
+		</div>
+	</section>
 
-	</body>
+	<!-- Contact -->
+	<section id="contact" class="wrapper style3 fade-up">
+		<div class="inner">
+			<h2>Get in Touch</h2>
+			<!-- Mailjet Form -->
+			<iframe data-w-type="embedded" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://sqoos.mjt.lu/wgt/sqoos/xyiq/form?c=724c8460" width="100%" style="height: 0;"></iframe>
+			<script type="text/javascript" src="https://app.mailjet.com/pas-nc-embedded-v1.js"></script>
+		</div>
+	</section>
+
+</div>
+
+<!-- Footer -->
+<footer id="footer" class="wrapper style1-alt">
+	<div class="inner">
+		<p>&copy; 2025 Thakur. All rights reserved.</p>
+	</div>
+</footer>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
