--- a/index.html
+++ b/index.html
@@ -1,188 +1,130 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Thakur Chetan Singh - Engineering Manager</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-  <style>
-    section {
-      padding: 4em 2em;
-    }
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      color: #1e1e1e;
-    }
-    p {
-      color: #444;
-    }
-    .pricing-table, .blog-grid {
-      display: flex;
-      gap: 2rem;
-      flex-wrap: wrap;
-    }
-    .pricing-card, .blog-post {
-      background: #fff;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-      width: 100%;
-      max-width: 300px;
-    }
-    .blog-post h3, .pricing-card h3 {
-      color: #2c3e50;
-      margin-top: 0;
-    }
-    .button.small {
-      margin-top: 1rem;
-    }
-    .wrapper.style1 {
-      background: #f7f7f7;
-    }
-    .wrapper.style2 {
-      background: #ffffff;
-    }
-    .wrapper.style3 {
-      background: #eef3f7;
-    }
-  </style>
+	<title>Thakur Chetan Singh - Full-Stack Test Engineering Manager</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="assets/css/main.css">
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+	<style>
+		h2 {
+			color: #2e4053;
+			font-size: 2rem;
+			margin-bottom: 20px;
+		}
+		p {
+			line-height: 1.8;
+			font-size: 1rem;
+			color: #333;
+		}
+		ul {
+			padding-left: 20px;
+			list-style-type: disc;
+			color: #333;
+		}
+		blockquote {
+			border-left: 3px solid #2e4053;
+			padding-left: 15px;
+			font-style: italic;
+			color: #555;
+		}
+		strong {
+			color: #2e4053;
+		}
+		.button.primary.hire-me {
+			background-color: #2e86de;
+			color: white;
+			border: none;
+			padding: 0.75em 1.5em;
+			font-size: 1.1em;
+			border-radius: 5px;
+			text-transform: uppercase;
+		}
+	</style>
 </head>
 <body class="is-preload">
 
-<!-- Sidebar -->
-<section id="sidebar">
-  <div class="inner">
-    <nav>
-      <ul>
-        <li><a href="#intro">Welcome</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-</section>
+	<!-- Sidebar -->
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#bio">About Me</a></li>
+					<li><a href="#contact">Get in Touch</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
 
-<!-- Wrapper -->
-<div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-  <!-- Intro -->
-  <section id="intro" class="wrapper style1 fullscreen fade-up">
-    <div class="inner">
-      <h1>Thakur Chetan Singh</h1>
-      <p>Engineering Manager | Full Stack QE Expert | Career Mentor</p>
-      <ul class="actions">
-        <li><a href="#contact" class="button primary">Hire Me</a></li>
-        <li><a href="#services" class="button">View Services</a></li>
-      </ul>
-    </div>
-  </section>
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<h1>Thakur Chetan Singh</h1>
+				<p>A Full Stack Test Engineering Manager helping founders build and scale secure, cloud-native apps on GCP.</p>
+				<ul class="actions">
+					<li><a href="#services" class="button scrolly">View Services</a></li>
+					<li><a href="#contact" class="button primary hire-me">Hire Me – Let’s Build Together</a></li>
+				</ul>
+			</div>
+		</section>
 
-  <!-- Services -->
-  <section id="services" class="wrapper style2">
-    <div class="inner">
-      <h2>Services Offered</h2>
-      <p>Whether you're an individual contributor looking to level up, a team navigating delivery chaos, or a company seeking engineering excellence—I’ve got a proven playbook.</p>
-      <ul>
-        <li><strong>Engineering Career Coaching:</strong> Personalized mentoring, resume reviews, and leadership transition help.</li>
-        <li><strong>Mock Interview Sessions:</strong> Focused preparation for QA, SDET, and EM roles (FAANG-style and startups).</li>
-        <li><strong>Team Scaling & Hiring:</strong> I help companies design test strategies, interview loops, and onboarding playbooks.</li>
-        <li><strong>CI/CD & Quality Transformation:</strong> Hands-on guidance for pipeline setup, test automation, and quality culture.</li>
-      </ul>
-    </div>
-  </section>
+		<!-- Services -->
+		<section id="services" class="wrapper style2 fade-up">
+			<div class="inner">
+				<h2>Consulting & Engineering Services</h2>
+				<p>I help SaaS, fintech, and e-commerce startups build scalable cloud applications using Google Cloud.</p>
+				<div class="features">
+					<ul>
+						<li><strong>🚀 MVP Development</strong><br> Full-stack React + Node.js apps built fast with CI/CD and cloud-native architecture.</li>
+						<li><strong>☁️ GCP Infrastructure Setup</strong><br> GKE, Cloud Run, Cloud SQL, Firestore, IAM – secure, cost-optimized environments.</li>
+						<li><strong>🔄 CI/CD Pipelines</strong><br> GitHub Actions, Terraform, and Docker pipelines deployed to GCP with best practices.</li>
+						<li><strong>📦 Microservices & APIs</strong><br> Resilient, scalable backend systems with monitoring and error handling.</li>
+					</ul>
+				</div>
+				<p><strong>Availability:</strong> Project-based or Retainer | <strong>Hourly:</strong> $50–$100 | <strong>Retainers:</strong> $3K–$8K/month</p>
+			</div>
+		</section>
 
-  <!-- Pricing -->
-  <section id="pricing" class="wrapper style3">
-    <div class="inner">
-      <h2>Pricing Plans</h2>
-      <p>Choose a plan based on your needs. Custom options available for teams and startups.</p>
-      <div class="pricing-table">
-        <div class="pricing-card">
-          <h3>Free</h3>
-          <p><strong>$0</strong>/month</p>
-          <ul>
-            <li>1 Resume Review</li>
-            <li>Email Support (72h)</li>
-            <li>1 Tip Sheet for QA Interview</li>
-          </ul>
-        </div>
-        <div class="pricing-card">
-          <h3>Pro</h3>
-          <p><strong>$99</strong>/month</p>
-          <ul>
-            <li>2 Mock Interviews</li>
-            <li>LinkedIn + Resume Overhaul</li>
-            <li>Email Support (48h)</li>
-          </ul>
-        </div>
-        <div class="pricing-card">
-          <h3>Premium</h3>
-          <p><strong>$249</strong>/month</p>
-          <ul>
-            <li>4 Mentorship Sessions</li>
-            <li>Career Strategy + Leadership Coaching</li>
-            <li>Slack/WhatsApp Priority Support</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
+		<!-- Bio -->
+		<section id="bio" class="wrapper style2">
+			<div class="inner">
+				<h2>Thought Ladder for Layoff Overthinking</h2>
+				<!-- (Bio content remains unchanged) -->
+				<!-- Your full original #bio content remains here -->
+			</div>
+		</section>
 
-  <!-- Blog -->
-  <section id="blog" class="wrapper style2">
-    <div class="inner">
-      <h2>Blog & Insights</h2>
-      <p>Engineering leadership, test automation strategy, and career growth—shared from real experience.</p>
-      <div class="blog-grid">
-        <div class="blog-post">
-          <h3>🚀 Breaking into Engineering Management</h3>
-          <p>Lessons from transitioning from QA leadership into full-time EM roles with tech giants.</p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="blog-post">
-          <h3>🛠️ Test Automation Strategy for Startups</h3>
-          <p>How to build a reliable CI/CD test pipeline from scratch without over-engineering.</p>
-          <a href="#">Read More →</a>
-        </div>
-        <div class="blog-post">
-          <h3>💡 Mock Interviews: What Really Matters</h3>
-          <p>Beyond DSA: Behavioral tactics and frameworks that win interviews.</p>
-          <a href="#">Read More →</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact" class="wrapper style3">
-    <div class="inner">
-      <h2>Get in Touch</h2>
-      <iframe data-w-type="embedded" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://sqoos.mjt.lu/wgt/sqoos/xyiq/form?c=724c8460" width="100%" style="height: 0;"></iframe>
-      <script src="https://app.mailjet.com/pas-nc-embedded-v1.js"></script>
-    </div>
-  </section>
-
-</div>
-
-<!-- Footer -->
-<footer id="footer" class="wrapper style1-alt">
-  <div class="inner">
-    <p>&copy; 2025 Thakur Chetan Singh. All rights reserved.</p>
-  </div>
-</footer>
-
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-
+		<!-- Contact -->
+		<section id="contact" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>Contact</h2>
+				<p>Ready to collaborate or discuss your next big product? Let's connect.</p>
+				<form method="post" action="#">
+					<div class="fields">
+						<div class="field half">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" />
+						</div>
+						<div class="field half">
+							<label for="email">Email</label>
+							<input type="email" name="email" id="email" />
+						</div>
+						<div class="field">
+							<label for="message">Message</label>
+							<textarea name="message" id="message" rows="5"></textarea>
+						</div>
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Send Message" class="primary" /></li>
+					</ul>
+				</form>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
