--- a/index.html
+++ b/index.html
@@ -1,130 +1,187 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Thakur Chetan Singh - Full-Stack Test Engineering Manager</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-	<style>
-		h2 {
-			color: #2e4053;
-			font-size: 2rem;
-			margin-bottom: 20px;
-		}
-		p {
-			line-height: 1.8;
-			font-size: 1rem;
-			color: #333;
-		}
-		ul {
-			padding-left: 20px;
-			list-style-type: disc;
-			color: #333;
-		}
-		blockquote {
-			border-left: 3px solid #2e4053;
-			padding-left: 15px;
-			font-style: italic;
-			color: #555;
-		}
-		strong {
-			color: #2e4053;
-		}
-		.button.primary.hire-me {
-			background-color: #2e86de;
-			color: white;
-			border: none;
-			padding: 0.75em 1.5em;
-			font-size: 1.1em;
-			border-radius: 5px;
-			text-transform: uppercase;
-		}
-	</style>
+  <title>Thakur Chetan Singh - Full-Stack Test Engineering Manager</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+  <style>
+    h2, h3 {
+      color: #ffffff;
+    }
+    p, li {
+      color: #f0f0f0;
+    }
+    .inner {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 2rem;
+      border-radius: 1rem;
+    }
+    .button.primary.hire-me {
+      background-color: #2e86de;
+      color: white;
+      border: none;
+      padding: 0.75em 1.5em;
+      font-size: 1.1em;
+      border-radius: 5px;
+      text-transform: uppercase;
+    }
+    .pricing-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: space-between;
+    }
+    .plan {
+      flex: 1;
+      background-color: #222;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      min-width: 200px;
+    }
+    .price {
+      font-size: 1.5rem;
+      color: #2ecc71;
+      margin: 0.5rem 0;
+    }
+    .blog-posts {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+    }
+    .blog-posts article {
+      background-color: #222;
+      padding: 1rem;
+      border-radius: 1rem;
+      flex: 1;
+      min-width: 200px;
+    }
+  </style>
 </head>
 <body class="is-preload">
 
-	<!-- Sidebar -->
-	<section id="sidebar">
-		<div class="inner">
-			<nav>
-				<ul>
-					<li><a href="#intro">Welcome</a></li>
-					<li><a href="#services">Services</a></li>
-					<li><a href="#bio">About Me</a></li>
-					<li><a href="#contact">Get in Touch</a></li>
-				</ul>
-			</nav>
-		</div>
-	</section>
+  <!-- Sidebar -->
+  <section id="sidebar">
+    <div class="inner">
+      <nav>
+        <ul>
+          <li><a href="#intro">Welcome</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#contact">Get in Touch</a></li>
+        </ul>
+      </nav>
+    </div>
+  </section>
 
-	<!-- Wrapper -->
-	<div id="wrapper">
+  <!-- Wrapper -->
+  <div id="wrapper">
 
-		<!-- Intro -->
-		<section id="intro" class="wrapper style1 fullscreen fade-up">
-			<div class="inner">
-				<h1>Thakur Chetan Singh</h1>
-				<p>A Full Stack Test Engineering Manager helping founders build and scale secure, cloud-native apps on GCP.</p>
-				<ul class="actions">
-					<li><a href="#services" class="button scrolly">View Services</a></li>
-					<li><a href="#contact" class="button primary hire-me">Hire Me – Let’s Build Together</a></li>
-				</ul>
-			</div>
-		</section>
+    <!-- Intro -->
+    <section id="intro" class="wrapper style1 fullscreen fade-up">
+      <div class="inner">
+        <h1>Thakur Chetan Singh</h1>
+        <p>A Full Stack Test Engineering Manager helping founders build and scale secure, cloud-native apps on GCP.</p>
+        <ul class="actions">
+          <li><a href="#services" class="button scrolly">View Services</a></li>
+          <li><a href="#contact" class="button primary hire-me">Hire Me – Let’s Build Together</a></li>
+        </ul>
+      </div>
+    </section>
 
-		<!-- Services -->
-		<section id="services" class="wrapper style2 fade-up">
-			<div class="inner">
-				<h2>Consulting & Engineering Services</h2>
-				<p>I help SaaS, fintech, and e-commerce startups build scalable cloud applications using Google Cloud.</p>
-				<div class="features">
-					<ul>
-						<li><strong>🚀 MVP Development</strong><br> Full-stack React + Node.js apps built fast with CI/CD and cloud-native architecture.</li>
-						<li><strong>☁️ GCP Infrastructure Setup</strong><br> GKE, Cloud Run, Cloud SQL, Firestore, IAM – secure, cost-optimized environments.</li>
-						<li><strong>🔄 CI/CD Pipelines</strong><br> GitHub Actions, Terraform, and Docker pipelines deployed to GCP with best practices.</li>
-						<li><strong>📦 Microservices & APIs</strong><br> Resilient, scalable backend systems with monitoring and error handling.</li>
-					</ul>
-				</div>
-				<p><strong>Availability:</strong> Project-based or Retainer | <strong>Hourly:</strong> $50–$100 | <strong>Retainers:</strong> $3K–$8K/month</p>
-			</div>
-		</section>
+    <!-- Services -->
+    <section id="services" class="wrapper style2 fade-up">
+      <div class="inner">
+        <h2>Consulting & Engineering Services</h2>
+        <p>I help SaaS, fintech, and e-commerce startups build scalable cloud applications using Google Cloud.</p>
+        <ul>
+          <li><strong>🚀 MVP Development:</strong> Full-stack React + Node.js apps built fast with CI/CD and cloud-native architecture.</li>
+          <li><strong>☁️ GCP Infrastructure Setup:</strong> GKE, Cloud Run, Cloud SQL, Firestore, IAM – secure, cost-optimized environments.</li>
+          <li><strong>🔄 CI/CD Pipelines:</strong> GitHub Actions, Terraform, and Docker pipelines deployed to GCP with best practices.</li>
+          <li><strong>📦 Microservices & APIs:</strong> Resilient, scalable backend systems with monitoring and error handling.</li>
+        </ul>
+      </div>
+    </section>
 
-		<!-- Bio -->
-		<section id="bio" class="wrapper style2">
-			<div class="inner">
-				<h2>Thought Ladder for Layoff Overthinking</h2>
-				<!-- (Bio content remains unchanged) -->
-				<!-- Your full original #bio content remains here -->
-			</div>
-		</section>
+    <!-- Pricing -->
+    <section id="pricing" class="wrapper style3 fade-up">
+      <div class="inner">
+        <h2>Plans & Pricing</h2>
+        <p>Choose the plan that fits your growth journey.</p>
+        <div class="pricing-grid">
+          <div class="plan">
+            <h3>Starter</h3>
+            <p class="price">$19/month</p>
+            <ul>
+              <li>1 personal consultation/month</li>
+              <li>Access to guided tools</li>
+            </ul>
+          </div>
+          <div class="plan">
+            <h3>Pro</h3>
+            <p class="price">$49/month</p>
+            <ul>
+              <li>Weekly coaching calls</li>
+              <li>Custom career roadmap</li>
+              <li>Email support</li>
+            </ul>
+          </div>
+          <div class="plan">
+            <h3>Elite</h3>
+            <p class="price">$99/month</p>
+            <ul>
+              <li>1:1 unlimited coaching</li>
+              <li>Resume + LinkedIn revamp</li>
+              <li>Job search strategy sessions</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<!-- Contact -->
-		<section id="contact" class="wrapper style3 fade-up">
-			<div class="inner">
-				<h2>Contact</h2>
-				<p>Ready to collaborate or discuss your next big product? Let's connect.</p>
-				<form method="post" action="#">
-					<div class="fields">
-						<div class="field half">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input type="email" name="email" id="email" />
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="5"></textarea>
-						</div>
-					</div>
-					<ul class="actions">
-						<li><input type="submit" value="Send Message" class="primary" /></li>
-					</ul>
-				</form>
-			</div>
-		</section>
-	</div>
+    <!-- Blog -->
+    <section id="blog" class="wrapper style2 fade-up">
+      <div class="inner">
+        <h2>From the Blog</h2>
+        <p>Insights to help you grow and navigate career uncertainty.</p>
+        <div class="blog-posts">
+          <article>
+            <h3>3 Mindset Shifts for Job Security Anxiety</h3>
+            <p>Learn how to ground yourself when your career feels out of control.</p>
+          </article>
+          <article>
+            <h3>How to Rebuild Confidence After a Layoff</h3>
+            <p>Practical tools for reframing what happened and moving forward.</p>
+          </article>
+          <article>
+            <h3>The Power of Micro-Wins in Your Career</h3>
+            <p>Celebrate small wins to rebuild momentum and purpose.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+   <!-- Contact -->
+<section id="contact" class="wrapper style3 fade-up">
+  <div class="inner">
+    <h2>Get in Touch</h2>
+    <!-- Mailjet Form Integration -->
+    <iframe 
+      data-w-type="embedded" 
+      frameborder="0" 
+      scrolling="no" 
+      marginheight="0" 
+      marginwidth="0" 
+      src="https://sqoos.mjt.lu/wgt/sqoos/xyiq/form?c=724c8460" 
+      width="100%" 
+      style="height: 0;">
+    </iframe>
+    <script type="text/javascript" src="https://app.mailjet.com/pas-nc-embedded-v1.js"></script>
+  </div>
+</section>
+
+  </div>
 </body>
 </html>
