--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Thakur Chetan Singh - Full-Stack Test Engineering Manager</title>
+  <title>Thakur Chetan Singh - Full-Stack Engineering Manager</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="assets/css/main.css">
@@ -83,7 +83,7 @@
     <section id="intro" class="wrapper style1 fullscreen fade-up">
       <div class="inner">
         <h1>Thakur Chetan Singh</h1>
-        <p>A Full Stack Test Engineering Manager helping founders build and scale secure, cloud-native apps on GCP.</p>
+        <p>A Full Stack Engineering Manager helping founders build and scale secure, cloud-native apps on GCP.</p>
         <ul class="actions">
           <li><a href="#services" class="button scrolly">View Services</a></li>
           <li><a href="#contact" class="button primary hire-me">Hire Me – Let’s Build Together</a></li>
